# testing_stuff2

./: .gitignore  MIT License  README.md  get_datas.py  main.py  main2.py  pyproject.toml
domain/: book.py
repository/: generic_repository.py
